# estructura-de-datos-i-q2-2026

DoubleLinkedList/: CMakeLists.txt  doublelinkedlist.cpp  doublelinkedlist.h  main.cpp  node.cpp  node.h
QueueLL/: CMakeLists.txt  main.cpp  node.cpp  node.h  queue.cpp  queue.h
RecursiveCountDigits/: CMakeLists.txt  main.cpp
SimpleLinkedList/: CMakeLists.txt  linkedlist.cpp  linkedlist.h  main.cpp  node.cpp  node.h
stack-array/: CMakeLists.txt  main.cpp  stackarray.cpp  stackarray.h
stack-ll/: CMakeLists.txt  main.cpp  node.cpp  node.h  stackll.cpp  stackll.h
